--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <script src="index.js"></script>
     <script>
         var typed = new Typed('#element', {
-            strings: ['Web Developer', 'Graphic Designer', 'Game Developer', '3D Modeller', 'App Developer'],
+            strings: ['Web Developer', 'AI Engineer', 'Game Developer', '3D Modeller', 'App Developer'],
             typeSpeed: 100,
             backSpeed: 50,
             loop: true
