index.html updated

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     I am passionate about creating amazing digital experiences.
                 </p>
             </div>
-            <img src="./developer.png" alt="Developer Image" width="20%">
+            <img src="./developer.jpg" alt="Developer Image" width="20%">
         </section>
 
         <section id="experience" class="pastexperience">
